--- a/style.css
+++ b/style.css
@@ -8,17 +8,25 @@
 }
 
 #tabuleiro {
-    width: 780px;
+    width: 582px;
+    height: 580px;
     margin: 0 auto;
+    border: 3px solid #000;
+    padding: 2px;
 }
 
 #container {
     border: 3px solid #000;
     width: 566px;
-    height: 563px;
-    border-radius: 5px;
+    height: 564px;
     cursor: pointer;
     float: left;
+    margin: -282px;
+}
+
+#tab {
+    border: 1px solid #000;
+    padding: 284px;
 }
 
 .row {
